k8s/api/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nagp-api
  namespace: nagp-assignment
  labels:
    app: nagp-api
    tier: api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nagp-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: nagp-api
        tier: api
    spec:
      containers:
        - name: api
          image: anshikashukla/nagp-api:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
