k8s/api/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nagp-api-service
  namespace: nagp-assignment
  labels:
    app: nagp-api
    tier: api
spec:
  type: ClusterIP
  selector:
    app: nagp-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
