k8s/api/07-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nagp-api-lb
  namespace: nagp-assignment
  labels:
    app: nagp-api
    tier: api
spec:
  type: LoadBalancer
  selector:
    app: nagp-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
